# sqlite-

./: .gitignore  CMakeLists.txt  readme.md  setup_linux.sh  setup_mac.sh  setup_vs2019.bat  sqlite-build.in  sqlite-download.in  test.db
include/sqlite++/: sqlite++.h
include/ssqll/: ssqll.h
src/: CMakeLists.txt  sqlite++.cpp  ssqll.cpp
test/: CMakeLists.txt  test-db.cpp  test-stmt.cpp
